<resources>
    <string name="app_name">MagazineApp</string>
    <string name="login">Login</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="register">Register</string>
    <string name="click_to_login">Click to Login</string>
    <string name="click_to_register">Click to Register</string>
    <string name="logout">Logout</string>
    <string name="tambah_dokumen">Tambah Dokumen</string>
    <string name="tambah_dokumens">+ Tambah Dokumen</string>
</resources>